# sire

./: ProjectHome.md  README.txt  merge_commands
attic/software_project/siren/trunk/: CMakeLists.txt  class.cpp  readwritelock.cpp  static.cpp  systemsemaphore.cpp  thread.cpp  waitcondition.cpp  worklog.cpp  workpacket.cpp  workspace.cpp
attic/software_project/siren/trunk/Siren/: assert.h  bytearray.h  forages.h  macros.h  mutex.h  number.h  obj.h  obj.hpp  promise.h  readwritelock.h  semaphore.h  siren.hpp  string.h  systemsemaphore.h  testreport.h  timer.h  tostring.h  waitcondition.h  workmonitor.h  workscheduler.h  workspace.h
branches/devel/: CMakeLists.txt  Doxyfile  TODO  sire.kdevelop
branches/devel/ideas/: mpicommunication  operatornew.cpp  parameter-table  serialise-object-registry  testfactory.cpp
branches/devel/python/Sire/Stream/: __init__.py
branches/devel/python/Sire/Units/: __init__.py
branches/devel/src/apps/siretest/: CMakeLists.txt  init_unit_test_suite.cpp
branches/devel/src/apps/spier/: CMakeLists.txt
branches/devel/src/apps/testlink/: Makefile
branches/devel/src/libs/: CMakeLists.txt  sireglobal.h
branches/devel/src/libs/PyWrap/: CMakeLists.txt  sireutils.py
branches/devel/src/libs/SireBase/: CMakeLists.txt  dynamicsharedptr.hpp  idmajminversion.cpp  idmajminversion.h  idpair.cpp  idpair.h  idtriple.cpp  idtriple.h  increment.h  incremint.h  majminversion.cpp  majminversion.h  md5sum.h  mutablesetiterator.hpp  pairmatrix.hpp  setiterator.hpp  sharedpolypointer.hpp  sharedpolypointer_cast.hpp  version.cpp
branches/devel/src/libs/SireCAS/: CMakeLists.txt  complexvalues.cpp  complexvalues.h  constant.cpp  errors.cpp  exbase.cpp  exbase.h  exp.h  expression.cpp  expression.h  expressionbase.h  factory.h  function.cpp  function.h  i.cpp  i.h  identities.cpp  identities.h  integrationconstant.h  invhyperbolicfuncs.cpp  power.cpp  power.h  powerconstant.cpp  powerconstant.h  product.cpp  product.h  registerexpression.h  singlefunc.cpp  sum.cpp  sum.h  symbol.cpp  symbol.h  symbolexpression.cpp  symbols.h  trigfuncs.cpp  trigfuncs.h  values.h
branches/devel/src/libs/SireCluster/: errors.cpp  processor.h  threadworker.cpp  threadworker.h
branches/devel/src/libs/SireDB/: CMakeLists.txt  assign_atoms.cpp  assign_atoms.h  assign_parameters.cpp  assign_parameters.h  assignbase.cpp  assignbase.h  assigninstruction.h  atomdb.h  atomparameter.hpp  atomtable.h  atomtable.hpp  atomtabledata.cpp  atomtype.cpp  atomtypedb.cpp  atomtypedb.h  dbbase.h  funcdb.h  local.pri  matchatom.h  matchhelpers.cpp  matchmr.cpp  matchres.h  (+22 more)
branches/devel/techdocs/: element-names.txt  quotes-to-aid-development
branches/devel/templates/: cpp
branches/devel/test/: test.py
branches/devel/test/SireCluster/: threadff.py
branches/devel/test/SireDB/: assign_p38.py
branches/devel/test/Squire/: convert_molpro_to_pdb.py  molproff.py
branches/devel/test/geometry/: make-tip4p.py
branches/devel/trunk/: local.pri
branches/devel/trunk/ideas/: double-loop  newdesign  sire.ppt  teststruct.cpp
branches/devel/trunk/techdocs/: templateoftemplate.cpp  testdefault.cpp
branches/users/chryswoods/: CMakeLists.txt  DoxySfile  Doxyfile  TODO  configure.pri  sire.kdevelop
branches/users/chryswoods/ideas/: atom_id_classes  check-points  editmol_to_molecule  network-available-objects  testclamp.cpp  testmpi.c
branches/users/chryswoods/techdocs/: id_numbers  progress_on_speed  quotes-to-aid-development  testcurioustemplate.cpp
branches/users/chryswoods/templates/: h
branches/users/chryswoods/test/: test.py
corelib/branches/users/chryswoods/: CMakeLists.txt  TODO
corelib/branches/users/nividic/: CMakeLists.txt  NAMING
corelib/src/libs/SireMove/: CMakeLists.txt  repexmove.cpp  rigidbodymc.cpp
python/tests/: CMakeLists.txt
python/tests/SireBase/: test_wrap.py
python/tests/SireMM/: test_extract.py  test_interff_multi.py  test_intraff.py  test_intragroupff.py  test_optimise.py  test_rf_interff.py  test_rf_softintra.py  test_shift.py  test_shift_intra.py  test_soft.py
python/tests/SireVol/: test_exception.py
python2/branches/users/chryswoods/: CMakeLists.txt  __init__.py  create_all_wrappers.py
software_project/conspire/trunk/: CMakeLists.txt  acc_clusters.xml
software_project/conspire/trunk/Conspire/: conspire.h  dimensions.h  dimensions.hpp  indexvalue.h  option.h  qtsupport.h  tempvalue.h  value.h
software_project/conspire/trunk/GUI/: CMakeLists.txt
software_project/conspire/trunk/SirenCore/: CMakeLists.txt
software_project/conspire/trunk/clusterdata/: acc_clusters.xml
software_project/conspire/trunk/cpp/: dimensions.cpp  indexvalue.cpp  option.cpp  tempvalue.cpp  value.cpp  values.cpp
software_project/conspire/trunk/examples/: demooptions.xml
software_project/conspire/trunk/job_classes/: job_classes.xml  leafhead3.py
software_project/siren/trunk/: CMakeLists.txt  assert.cpp  block.cpp  class.cpp  class.h  date.cpp  datetime.cpp  exception.cpp  exceptions.cpp  forages.cpp  macros.h  mutex.cpp  none.cpp  none.h  number.cpp  obj.cpp  obj.h  object.cpp  object.h  percentage.cpp  promise.cpp  promisedata.cpp  readwritelock.cpp  semaphore.cpp  siren.cpp  siren.h  siren.hpp  sirentest.cpp  static.cpp  string.cpp  stringlist.cpp  systemsemaphore.cpp  testreport.cpp  thread.cpp  threaddata.cpp  time.cpp  timer.cpp  waitcondition.cpp  workmonitor.cpp  workpacket.cpp  (+3 more)
software_project/siren/trunk/Siren/: assert.h  block.h  block.hpp  bytearray.h  class.h  date.h  datetime.h  editor.h  editor.hpp  exception.h  exceptions.h  forages.h  interfaces.h  macros.h  mutable.h  mutable.hpp  mutex.h  none.h  number.h  obj.h  obj.hpp  object.h  object.hpp  percentage.h  promise.h  readwritelock.h  semaphore.h  siren.h  siren.hpp  static.h  stream.h  string.h  stringlist.h  systemsemaphore.h  testreport.h  thread.h  time.h  timer.h  tostring.h  tostring.hpp  (+7 more)
software_project/siren/trunk/detail/: boostsupport.h  metatype.cpp  metatype.h  metatype.hpp  qt4support.h
trunk/src/libs/SireMaths/: CMakeLists.txt  matrix.cpp  matrix.h  plane.h  rational.cpp  vector.cpp
(+9641 files in other folders)
